# wifi-killer

./: .gitignore  APSniffer.cpp  APSniffer.hpp  CMakeLists.txt  DataSniffer.cpp  DataSniffer.h  DeauthSender.cpp  DeauthSender.h  README.md  beacon_sniff.py  beacon_sniffer.hpp  data_sniffer.hpp  deauth_sender.hpp  killwifi.py  main.cpp  safe_queue.hpp  wkiller.py
